atualizando main e footer

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="text-light  py-3">
+    <header class="text-light  py-3 backgroundBrown">
         <div class="container">
         <h1 class="mb-0">Petshop Au Au </h1>
         <img href="cachorro.jpg" class="img-fluid">
@@ -43,7 +43,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="text-light  py-3 backgroundBrown">
         <p>&copy; 2023 Petshop</p>
     </footer>
 </body>
