--- a/Dashboard.html
+++ b/Dashboard.html
@@ -34,7 +34,7 @@
     </ul>
 
     <main>
-        <section class="">
+        <section>
             <h2>Cachorros</h2>
             <div>
                 <p>Índice de cachorros:</p>
